# LeKV

./: CMakeLists.txt  README.md  main.cpp
client/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  lekv.cpp
src/client/: CMakeLists.txt  kv_client.cpp
src/common/: common.h
src/kv/: CMakeLists.txt  kv_server.cpp  kv_server.h  raft_node.cpp  raft_node.h  raft_types.h
src/rpc/: CMakeLists.txt  binary_protocol.cpp  binary_protocol.h  rpc_client.cpp  rpc_client.h  rpc_server.cpp  rpc_server.h  text_protocol.cpp  text_protocol.h
src/storage/: CMakeLists.txt  storage_engine.cpp  storage_engine.h
